[package]
name = "easyfraud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monotree = {path = "../Prog/monotree"}
ed25519-dalek = "2.1.0"
thiserror = "1.0.50"
tower = { version = "0.4", features = ["full"]}
tendermint-proto = "0.34"
tendermint = "0.34"